<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_gestion_inc"
            android:title="@string/menu_gestionar_inc"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_gestion_ecop"
            android:title="@string/menu_gestionar_ecopuntos" />

        <!--<item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_gestion_admins"
            android:title="@string/menu_gestionar_admin"/>-->

       <!-- <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_reportes"
            android:title="sacar esto" />-->

    </group>

    <item android:title="@string/titulo_reportes"
          android:id="@+id/titulo_reportes">

        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_reportes2"
                android:title="@string/menu_reporte_inc"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_reportes"
                android:title="@string/menu_reporte_usu" />
        </menu>
    </item>

</menu>
