<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/color3"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="367dp"
        android:layout_height="83dp"
        android:layout_gravity="center"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/prueba_admin_base_de_datos" />

    <TextView
        android:id="@+id/txt_nombre_admin"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold_italic"
        android:hint="@string/nav_header_title"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold_italic"
        android:hint="@string/nav_header_subtitle"
        android:textColorHint="@color/common_google_signin_btn_text_dark_default" />

</LinearLayout>
