<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_gestionarEcoPunto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color2"
    tools:context=".fragmentos.GestionarEcopuntoFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/tv_frag_gest_ecop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/roboto_bold_italic"
        android:gravity="center|top"
        android:hint="@string/menu_gestionar_ecopuntos"
        android:textColorHint="@color/colorBotonBlanco"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_ingrese_datos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/roboto_bold_italic"
        android:hint="@string/tv_ingrese_datos"
        android:textColorHint="@color/colorBotonBlanco"
        android:textSize="20sp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/linearMainActivity"
        android:layout_marginTop="50dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_ecop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:textColorHint="@color/colorFondoBlanco"
            android:textColor="@color/colorFondoBlanco">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_nombre_ecop"
                android:layout_width="60mm"
                android:layout_height="55sp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/roboto_bold_italic"
                android:hint="@string/tv_nombre_ecop"
                android:inputType="textPersonName"
                android:textColorHint="@color/colorFondoBlanco"
                android:textColor="@color/colorFondoBlanco"
                android:textSize="18sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_ubic_ecop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:textColorHint="@color/colorFondoBlanco"
            android:textColor="@color/colorFondoBlanco">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_ubicacion_ecop"
                android:layout_width="60mm"
                android:layout_height="55sp"
                android:layout_marginTop="10sp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/tv_ubicacion_ecop"
                android:inputType="textPersonName"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_bold_italic"
                android:textColorHint="@color/colorFondoBlanco"
                android:textColor="@color/colorFondoBlanco"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_descrip_ecop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:textColorHint="@color/colorFondoBlanco">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_descripcion_ecop"
                android:layout_width="60mm"
                android:layout_height="55sp"
                android:ems="10"
                android:hint="@string/tv_descripcion_ecop"
                android:inputType="textPersonName"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_bold_italic"
                android:textColorHint="@color/colorFondoBlanco"
                android:textColor="@color/colorFondoBlanco"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/bt_subir_ecop"
            android:layout_width="60mm"
            android:layout_height="55sp"
            android:layout_gravity="center"
            android:layout_marginTop="100sp"
            android:background="@drawable/stylo_boton_pressed"
            android:drawableLeft="@drawable/ic_confirmar"
            android:fontFamily="@font/roboto_bold_italic"
            android:hint="@string/bt_agregar_ecop"
            android:textColor="@color/colorFondoBlanco"
            android:textColorHighlight="@color/colorAccent"
            android:textColorHint="@color/colorFondoBlanco"
            android:textSize="20sp" />


    </LinearLayout>


</FrameLayout>